[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ColorPicker.tscn" type="PackedScene" id=2]

[node name="Settings" type="Control" groups=["menus"]]
margin_left = -219.0
margin_top = -91.0
margin_right = 92.0
margin_bottom = 123.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Back" type="Button" parent="." groups=["back"]]
margin_left = 238.0
margin_top = 177.0
margin_right = 319.0
margin_bottom = 211.0
rect_scale = Vector2( 0.7, 0.7 )
text = "back"

[node name="Apply" type="Button" parent="."]
margin_left = 25.0
margin_top = 177.0
margin_right = 106.0
margin_bottom = 211.0
rect_scale = Vector2( 0.7, 0.7 )
text = "apply"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 31.0
margin_right = 281.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShowGrid" type="CheckBox" parent="VBoxContainer"]
visible = false
margin_right = 256.0
margin_bottom = 24.0
text = "shOW GrID"
flat = true

[node name="SmoothLight" type="CheckBox" parent="VBoxContainer"]
visible = false
margin_right = 256.0
margin_bottom = 24.0
text = "Smooth light"
flat = true

[node name="Foreground" type="CheckBox" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 256.0
margin_bottom = 52.0
text = "Foreground"
flat = true

[node name="CrtFilter" type="CheckBox" parent="VBoxContainer"]
margin_right = 256.0
margin_bottom = 24.0
text = "Filter"
flat = true

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 256.0
margin_bottom = 52.0
text = "Fullscreen"
flat = true

[node name="GridColor" type="Control" parent="VBoxContainer"]
visible = false
margin_top = 28.0
margin_right = 256.0
margin_bottom = 129.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/GridColor"]
margin_right = 131.0
margin_bottom = 30.0
text = "grid color"

[node name="ColorsPicker" parent="VBoxContainer/GridColor" instance=ExtResource( 2 )]
anchor_top = 0.252
anchor_bottom = 0.252
margin_left = 145.0
margin_top = -8.372
margin_right = 312.0
margin_bottom = 33.628

[node name="ShellOpenSaveFile" type="Button" parent="."]
margin_left = 96.0
margin_top = 181.0
margin_right = 352.0
margin_bottom = 209.0
rect_scale = Vector2( 0.5, 0.5 )
size_flags_vertical = 0
text = "Open local save file"

[connection signal="pressed" from="Apply" to="." method="_on_Apply_pressed"]
[connection signal="toggled" from="VBoxContainer/ShowGrid" to="." method="on_settings_button_pressed"]
[connection signal="toggled" from="VBoxContainer/SmoothLight" to="." method="on_settings_button_pressed"]
[connection signal="toggled" from="VBoxContainer/Foreground" to="." method="on_settings_button_pressed"]
[connection signal="toggled" from="VBoxContainer/CrtFilter" to="." method="on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="ShellOpenSaveFile" to="." method="_on_open_save_file_pressed"]
